3 params variation for server

--- a/simulation/sim_notebooks/2020-10-05-ker-kbnr-diff-eval.ipynb
+++ b/simulation/sim_notebooks/2020-10-05-ker-kbnr-diff-eval.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,13 +450,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Existing file loaded successfully.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -468,6 +461,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Existing file loaded successfully.\n",
       "Existing file loaded successfully.\n",
       "Existing file loaded successfully.\n",
       "Existing file loaded successfully.\n",
@@ -870,8 +864,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.00000000e+08, 4.00000000e+08],\n",
+       "       [1.11111111e+08, 4.44444444e+08],\n",
+       "       [1.22222222e+08, 4.88888889e+08],\n",
+       "       [1.33333333e+08, 5.33333333e+08],\n",
+       "       [1.44444444e+08, 5.77777778e+08],\n",
+       "       [1.55555556e+08, 6.22222222e+08],\n",
+       "       [1.66666667e+08, 6.66666667e+08],\n",
+       "       [1.77777778e+08, 7.11111111e+08],\n",
+       "       [1.88888889e+08, 7.55555556e+08],\n",
+       "       [2.00000000e+08, 8.00000000e+08]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sims[14].calc_dict['constant_dependence']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -933,7 +958,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
