--- a/simulation/sim_notebooks/2020-10-06-kenr-kbnr-diff.ipynb
+++ b/simulation/sim_notebooks/2020-10-06-kenr-kbnr-diff.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,8 +557,98 @@
     "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
     "\n",
     "constants_array = np.zeros((10, 2))\n",
-    "constants_array[:, 0] = np.linspace(2e8, 2e5, 10)\n",
-    "constants_array[:, 1] = np.linspace(4e8, 4e9, 10)"
+    "constants_array[:, 0] = np.linspace(4e8, 4e9, 10)\n",
+    "constants_array[:, 1] = np.linspace(2e8, 2e7, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-07 17:58:06.272402\n",
+      "Start of exiton simulation: 2020-10-07 17:58:06.273794\n",
+      "End exiton simulation: 2020-10-07 18:06:21.267650\n",
+      "Elapsed time: 00:08:14\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:06:21.269668\n",
+      "End exiton simulation: 2020-10-07 18:14:39.989191\n",
+      "Elapsed time: 00:08:18\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:14:40.005418\n",
+      "End exiton simulation: 2020-10-07 18:20:30.670173\n",
+      "Elapsed time: 00:05:50\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:20:30.675268\n",
+      "End exiton simulation: 2020-10-07 18:24:22.235889\n",
+      "Elapsed time: 00:03:51\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:24:22.240409\n",
+      "End exiton simulation: 2020-10-07 18:27:09.255622\n",
+      "Elapsed time: 00:02:47\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:27:09.261412\n",
+      "End exiton simulation: 2020-10-07 18:29:20.711432\n",
+      "Elapsed time: 00:02:11\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:29:20.713850\n",
+      "End exiton simulation: 2020-10-07 18:31:13.822551\n",
+      "Elapsed time: 00:01:53\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:31:13.824013\n",
+      "End exiton simulation: 2020-10-07 18:32:53.640860\n",
+      "Elapsed time: 00:01:39\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:32:53.643078\n",
+      "End exiton simulation: 2020-10-07 18:34:25.600877\n",
+      "Elapsed time: 00:01:31\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:34:25.606071\n",
+      "End exiton simulation: 2020-10-07 18:35:51.349204\n",
+      "Elapsed time: 00:01:25\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:35:51.350252\n",
+      "End exiton simulation: 2020-10-07 18:37:15.443063\n",
+      "Elapsed time: 00:01:24\n",
+      "End exiton simulation: 2020-10-07 18:37:15.445685\n",
+      "Elapsed time: 00:39:09\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_bnr', 'k_enr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_kenr_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e15 * 2, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(4e8, 4e8*2, 10)\n",
+    "constants_array[:, 1] = np.linspace(2e8, 2e8 / 2, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-08-exciton_sim-kenr_kbnr_diff_defect_10.h5', kin_const_1)"
    ]
   },
   {
@@ -570,57 +660,147 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-10-07 15:34:57.936321\n",
-      "Start of exiton simulation: 2020-10-07 15:34:57.936718\n",
-      "End exiton simulation: 2020-10-07 15:43:18.156596\n",
-      "Elapsed time: 00:08:20\n",
+      "Start of calculation: 2020-10-08 08:44:10.479489\n",
+      "Start of exiton simulation: 2020-10-08 08:44:10.481260\n",
+      "End exiton simulation: 2020-10-08 08:52:40.261001\n",
+      "Elapsed time: 00:08:29\n",
       "rate constant set processed(1/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:43:18.162299\n",
-      "End exiton simulation: 2020-10-07 15:52:08.873494\n",
-      "Elapsed time: 00:08:50\n",
+      "Start of exiton simulation: 2020-10-08 08:52:40.266430\n",
+      "End exiton simulation: 2020-10-08 09:01:03.652406\n",
+      "Elapsed time: 00:08:23\n",
       "rate constant set processed(2/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:52:08.876012\n",
-      "End exiton simulation: 2020-10-07 16:00:51.765787\n",
-      "Elapsed time: 00:08:42\n",
+      "Start of exiton simulation: 2020-10-08 09:01:03.660170\n",
+      "End exiton simulation: 2020-10-08 09:09:10.071329\n",
+      "Elapsed time: 00:08:06\n",
       "rate constant set processed(3/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:00:51.768317\n",
-      "End exiton simulation: 2020-10-07 16:09:41.262625\n",
-      "Elapsed time: 00:08:49\n",
+      "Start of exiton simulation: 2020-10-08 09:09:10.073024\n",
+      "End exiton simulation: 2020-10-08 09:16:57.136399\n",
+      "Elapsed time: 00:07:47\n",
       "rate constant set processed(4/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:09:41.264967\n",
-      "End exiton simulation: 2020-10-07 16:18:44.882846\n",
-      "Elapsed time: 00:09:03\n",
+      "Start of exiton simulation: 2020-10-08 09:16:57.141808\n",
+      "End exiton simulation: 2020-10-08 09:24:28.262218\n",
+      "Elapsed time: 00:07:31\n",
       "rate constant set processed(5/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:18:44.889489\n",
-      "End exiton simulation: 2020-10-07 16:27:34.551419\n",
-      "Elapsed time: 00:08:49\n",
+      "Start of exiton simulation: 2020-10-08 09:24:28.264448\n",
+      "End exiton simulation: 2020-10-08 09:31:44.134616\n",
+      "Elapsed time: 00:07:15\n",
       "rate constant set processed(6/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:27:34.556596\n",
-      "End exiton simulation: 2020-10-07 16:36:34.995619\n",
-      "Elapsed time: 00:09:00\n",
+      "Start of exiton simulation: 2020-10-08 09:31:44.136155\n",
+      "End exiton simulation: 2020-10-08 09:38:40.114178\n",
+      "Elapsed time: 00:06:55\n",
       "rate constant set processed(7/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:36:35.000183\n",
-      "End exiton simulation: 2020-10-07 16:45:36.473263\n",
-      "Elapsed time: 00:09:01\n",
+      "Start of exiton simulation: 2020-10-08 09:38:40.119126\n",
+      "End exiton simulation: 2020-10-08 09:45:26.089153\n",
+      "Elapsed time: 00:06:45\n",
       "rate constant set processed(8/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:45:36.476686\n",
-      "End exiton simulation: 2020-10-07 16:54:26.385462\n",
-      "Elapsed time: 00:08:49\n",
+      "Start of exiton simulation: 2020-10-08 09:45:26.096346\n",
+      "End exiton simulation: 2020-10-08 09:51:55.376589\n",
+      "Elapsed time: 00:06:29\n",
       "rate constant set processed(9/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 16:54:26.389953\n",
-      "End exiton simulation: 2020-10-07 17:03:12.056532\n",
-      "Elapsed time: 00:08:45\n",
+      "Start of exiton simulation: 2020-10-08 09:51:55.380858\n",
+      "End exiton simulation: 2020-10-08 09:58:02.183500\n",
+      "Elapsed time: 00:06:06\n",
       "rate constant set processed(10/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 17:03:12.058877\n",
-      "End exiton simulation: 2020-10-07 17:11:43.650423\n",
-      "Elapsed time: 00:08:31\n",
-      "End exiton simulation: 2020-10-07 17:11:43.653212\n",
-      "Elapsed time: 01:36:45\n"
+      "Start of exiton simulation: 2020-10-08 09:58:02.189783\n",
+      "End exiton simulation: 2020-10-08 10:04:02.487941\n",
+      "Elapsed time: 00:06:00\n",
+      "End exiton simulation: 2020-10-08 10:04:02.499470\n",
+      "Elapsed time: 01:19:52\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
+    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_bnr', 'k_enr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_kenr_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e15 * 2, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(4e8, 4e8*3, 10)\n",
+    "constants_array[:, 1] = np.linspace(2e8, 2e8 / 2, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-08-exciton_sim-kenr_kbnr_diff_defect_12.h5', kin_const_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-08 10:59:37.587787\n",
+      "Start of exiton simulation: 2020-10-08 10:59:37.590359\n",
+      "End exiton simulation: 2020-10-08 11:08:48.885162\n",
+      "Elapsed time: 00:09:11\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:08:48.890697\n",
+      "End exiton simulation: 2020-10-08 11:17:22.271742\n",
+      "Elapsed time: 00:08:33\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:17:22.273139\n",
+      "End exiton simulation: 2020-10-08 11:25:25.507719\n",
+      "Elapsed time: 00:08:03\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:25:25.512318\n",
+      "End exiton simulation: 2020-10-08 11:32:55.963275\n",
+      "Elapsed time: 00:07:30\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:32:55.964842\n",
+      "End exiton simulation: 2020-10-08 11:39:49.242155\n",
+      "Elapsed time: 00:06:53\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:39:49.246724\n",
+      "End exiton simulation: 2020-10-08 11:46:05.398756\n",
+      "Elapsed time: 00:06:16\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:46:05.404140\n",
+      "End exiton simulation: 2020-10-08 11:51:50.801157\n",
+      "Elapsed time: 00:05:45\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:51:50.806877\n",
+      "End exiton simulation: 2020-10-08 11:57:00.948854\n",
+      "Elapsed time: 00:05:10\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 11:57:00.956474\n",
+      "End exiton simulation: 2020-10-08 12:01:45.839848\n",
+      "Elapsed time: 00:04:44\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 12:01:45.844853\n",
+      "End exiton simulation: 2020-10-08 12:06:10.899052\n",
+      "Elapsed time: 00:04:25\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 12:06:10.900381\n",
+      "End exiton simulation: 2020-10-08 12:10:14.214642\n",
+      "Elapsed time: 00:04:03\n",
+      "End exiton simulation: 2020-10-08 12:10:14.215996\n",
+      "Elapsed time: 01:10:36\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_bnr', 'k_enr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
     "                                    diff_const, (1.07e15, 1.07e15/3),\n",
     "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
