--- a/simulation/sim_notebooks/2020-10-07-kenr-kbnr-diff.ipynb
+++ b/simulation/sim_notebooks/2020-10-07-kenr-kbnr-diff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,8 +375,210 @@
     "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
     "\n",
     "constants_array = np.zeros((10, 2))\n",
-    "constants_array[:, 0] = np.linspace(2e8, 2e5, 10)\n",
-    "constants_array[:, 1] = np.linspace(4e8, 4e9, 10)"
+    "constants_array[:, 0] = np.linspace(4e8, 4e9, 10)\n",
+    "constants_array[:, 1] = np.linspace(2e8, 2e7, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existing file loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-07-exciton_sim-kenr_kbnr_diff_prist_7.h5', kin_const_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-07 18:02:54.945890\n",
+      "Start of exiton simulation: 2020-10-07 18:02:54.946737\n",
+      "End exiton simulation: 2020-10-07 18:04:35.669801\n",
+      "Elapsed time: 00:01:40\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:04:35.675199\n",
+      "End exiton simulation: 2020-10-07 18:06:28.159145\n",
+      "Elapsed time: 00:01:52\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:06:28.160522\n",
+      "End exiton simulation: 2020-10-07 18:08:19.470753\n",
+      "Elapsed time: 00:01:51\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:08:19.475162\n",
+      "End exiton simulation: 2020-10-07 18:10:04.070064\n",
+      "Elapsed time: 00:01:44\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:10:04.075509\n",
+      "End exiton simulation: 2020-10-07 18:11:46.045865\n",
+      "Elapsed time: 00:01:41\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:11:46.050184\n",
+      "End exiton simulation: 2020-10-07 18:13:26.544669\n",
+      "Elapsed time: 00:01:40\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:13:26.549429\n",
+      "End exiton simulation: 2020-10-07 18:15:04.431059\n",
+      "Elapsed time: 00:01:37\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:15:04.435693\n",
+      "End exiton simulation: 2020-10-07 18:16:38.706541\n",
+      "Elapsed time: 00:01:34\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:16:38.711842\n",
+      "End exiton simulation: 2020-10-07 18:18:09.109660\n",
+      "Elapsed time: 00:01:30\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:18:09.115107\n",
+      "End exiton simulation: 2020-10-07 18:19:37.269909\n",
+      "Elapsed time: 00:01:28\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-07 18:19:37.272191\n",
+      "End exiton simulation: 2020-10-07 18:21:04.158567\n",
+      "Elapsed time: 00:01:26\n",
+      "End exiton simulation: 2020-10-07 18:21:04.163262\n",
+      "Elapsed time: 00:18:09\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_bnr', 'k_enr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_kenr_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e15 * 2, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(4e8, 4e8*2, 10)\n",
+    "constants_array[:, 1] = np.linspace(2e8, 2e8 / 2, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-08-exciton_sim-kenr_kbnr_diff_prist_9.h5', kin_const_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-08 08:43:19.555642\n",
+      "Start of exiton simulation: 2020-10-08 08:43:19.555851\n",
+      "End exiton simulation: 2020-10-08 08:44:56.775512\n",
+      "Elapsed time: 00:01:37\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:44:56.782406\n",
+      "End exiton simulation: 2020-10-08 08:46:52.312175\n",
+      "Elapsed time: 00:01:55\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:46:52.318783\n",
+      "End exiton simulation: 2020-10-08 08:48:43.266711\n",
+      "Elapsed time: 00:01:50\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:48:43.269280\n",
+      "End exiton simulation: 2020-10-08 08:50:28.382030\n",
+      "Elapsed time: 00:01:45\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:50:28.390726\n",
+      "End exiton simulation: 2020-10-08 08:52:10.241606\n",
+      "Elapsed time: 00:01:41\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:52:10.247167\n",
+      "End exiton simulation: 2020-10-08 08:53:50.210145\n",
+      "Elapsed time: 00:01:39\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:53:50.214000\n",
+      "End exiton simulation: 2020-10-08 08:55:27.201709\n",
+      "Elapsed time: 00:01:36\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:55:27.207632\n",
+      "End exiton simulation: 2020-10-08 08:57:02.867831\n",
+      "Elapsed time: 00:01:35\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:57:02.875840\n",
+      "End exiton simulation: 2020-10-08 08:58:33.163512\n",
+      "Elapsed time: 00:01:30\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 08:58:33.169202\n",
+      "End exiton simulation: 2020-10-08 09:00:02.644337\n",
+      "Elapsed time: 00:01:29\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-08 09:00:02.649316\n",
+      "End exiton simulation: 2020-10-08 09:01:29.850521\n",
+      "Elapsed time: 00:01:27\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "End exiton simulation: 2020-10-08 09:01:30.085407\n",
+      "Elapsed time: 00:18:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_bnr', 'k_enr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_kenr_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e15 * 2, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(4e8, 4e8*3, 10)\n",
+    "constants_array[:, 1] = np.linspace(2e8, 2e8 / 2, 10)"
    ]
   },
   {
@@ -385,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exc_sim_kenr_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-07-exciton_sim-kenr_kbnr_diff_prist_7.h5', kin_const_1)"
+    "exc_sim_kenr_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-08-exciton_sim-kenr_kbnr_diff_prist_11.h5', kin_const_1)"
    ]
   },
   {
@@ -397,65 +599,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-10-07 15:34:06.670926\n",
-      "Start of exiton simulation: 2020-10-07 15:34:06.672224\n",
-      "End exiton simulation: 2020-10-07 15:34:16.637549\n",
-      "Elapsed time: 00:00:09\n",
+      "Start of calculation: 2020-10-08 10:58:53.348754\n",
+      "Start of exiton simulation: 2020-10-08 10:58:53.349315\n",
+      "End exiton simulation: 2020-10-08 11:00:36.559058\n",
+      "Elapsed time: 00:01:43\n",
       "rate constant set processed(1/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:34:16.640480\n",
-      "End exiton simulation: 2020-10-07 15:34:27.926433\n",
-      "Elapsed time: 00:00:11\n",
+      "Start of exiton simulation: 2020-10-08 11:00:36.564611\n",
+      "End exiton simulation: 2020-10-08 11:02:45.861096\n",
+      "Elapsed time: 00:02:09\n",
       "rate constant set processed(2/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:34:27.928269\n",
-      "End exiton simulation: 2020-10-07 15:34:38.916504\n",
-      "Elapsed time: 00:00:10\n",
+      "Start of exiton simulation: 2020-10-08 11:02:45.862957\n",
+      "End exiton simulation: 2020-10-08 11:04:44.565979\n",
+      "Elapsed time: 00:01:58\n",
       "rate constant set processed(3/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:34:38.919447\n",
-      "End exiton simulation: 2020-10-07 15:34:49.398469\n",
-      "Elapsed time: 00:00:10\n",
+      "Start of exiton simulation: 2020-10-08 11:04:44.575181\n",
+      "End exiton simulation: 2020-10-08 11:06:36.570031\n",
+      "Elapsed time: 00:01:51\n",
       "rate constant set processed(4/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:34:49.400227\n",
-      "End exiton simulation: 2020-10-07 15:34:59.664001\n",
-      "Elapsed time: 00:00:10\n",
+      "Start of exiton simulation: 2020-10-08 11:06:36.572168\n",
+      "End exiton simulation: 2020-10-08 11:08:26.155998\n",
+      "Elapsed time: 00:01:49\n",
       "rate constant set processed(5/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:34:59.666578\n",
-      "End exiton simulation: 2020-10-07 15:35:09.916286\n",
-      "Elapsed time: 00:00:10\n",
+      "Start of exiton simulation: 2020-10-08 11:08:26.158244\n",
+      "End exiton simulation: 2020-10-08 11:10:07.074736\n",
+      "Elapsed time: 00:01:40\n",
       "rate constant set processed(6/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:35:09.919633\n",
-      "End exiton simulation: 2020-10-07 15:35:19.605327\n",
-      "Elapsed time: 00:00:09\n",
+      "Start of exiton simulation: 2020-10-08 11:10:07.080711\n",
+      "End exiton simulation: 2020-10-08 11:11:46.235737\n",
+      "Elapsed time: 00:01:39\n",
       "rate constant set processed(7/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:35:19.605882\n",
-      "End exiton simulation: 2020-10-07 15:35:29.080283\n",
-      "Elapsed time: 00:00:09\n",
+      "Start of exiton simulation: 2020-10-08 11:11:46.241432\n",
+      "End exiton simulation: 2020-10-08 11:13:23.821270\n",
+      "Elapsed time: 00:01:37\n",
       "rate constant set processed(8/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:35:29.083493\n",
-      "End exiton simulation: 2020-10-07 15:35:38.173444\n",
-      "Elapsed time: 00:00:09\n",
+      "Start of exiton simulation: 2020-10-08 11:13:23.827401\n",
+      "End exiton simulation: 2020-10-08 11:14:55.446075\n",
+      "Elapsed time: 00:01:31\n",
       "rate constant set processed(9/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:35:38.175582\n",
-      "End exiton simulation: 2020-10-07 15:35:47.222335\n",
-      "Elapsed time: 00:00:09\n",
+      "Start of exiton simulation: 2020-10-08 11:14:55.452767\n",
+      "End exiton simulation: 2020-10-08 11:16:25.920492\n",
+      "Elapsed time: 00:01:30\n",
       "rate constant set processed(10/ 10)\n",
-      "Start of exiton simulation: 2020-10-07 15:35:47.225259\n",
-      "End exiton simulation: 2020-10-07 15:35:56.151598\n",
-      "Elapsed time: 00:00:08\n",
-      "End exiton simulation: 2020-10-07 15:35:56.170397\n",
-      "Elapsed time: 00:01:49\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
+      "Start of exiton simulation: 2020-10-08 11:16:25.925578\n",
+      "End exiton simulation: 2020-10-08 11:17:54.391805\n",
+      "Elapsed time: 00:01:28\n",
+      "End exiton simulation: 2020-10-08 11:17:54.394175\n",
+      "Elapsed time: 00:19:01\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
+    "exc_sim_kenr_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_bnr', 'k_enr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
     "                                    diff_const, (1.07e15, 1.07e15/3),\n",
     "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
