server evaluation 50 defects on CNT

--- a/simulation/sim_notebooks/2020-10-19-ker_kenr-kbnr-diff-eval.ipynb
+++ b/simulation/sim_notebooks/2020-10-19-ker_kenr-kbnr-diff-eval.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,6 +992,78 @@
    "source": [
     "# kenr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.00000000e+08, 2.00000000e+08],\n",
+       "       [4.88888889e+08, 1.88888889e+08],\n",
+       "       [5.77777778e+08, 1.77777778e+08],\n",
+       "       [6.66666667e+08, 1.66666667e+08],\n",
+       "       [7.55555556e+08, 1.55555556e+08],\n",
+       "       [8.44444444e+08, 1.44444444e+08],\n",
+       "       [9.33333333e+08, 1.33333333e+08],\n",
+       "       [1.02222222e+09, 1.22222222e+08],\n",
+       "       [1.11111111e+09, 1.11111111e+08],\n",
+       "       [1.20000000e+09, 1.00000000e+08]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kenr_prist[0].calc_dict['constant_dependence']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.00000000e+08, 2.00000000e+08],\n",
+       "       [4.88888889e+08, 1.88888889e+08],\n",
+       "       [5.77777778e+08, 1.77777778e+08],\n",
+       "       [6.66666667e+08, 1.66666667e+08],\n",
+       "       [7.55555556e+08, 1.55555556e+08],\n",
+       "       [8.44444444e+08, 1.44444444e+08],\n",
+       "       [9.33333333e+08, 1.33333333e+08],\n",
+       "       [1.02222222e+09, 1.22222222e+08],\n",
+       "       [1.11111111e+09, 1.11111111e+08],\n",
+       "       [1.20000000e+09, 1.00000000e+08]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kenr_prist[0].calc_dict['constant_dependence']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1008,8 +1080,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kenr_prist_pd['k_enr s^-1'] = kenr_prist[0].calc_dict['constant_dependence'][:, 0]\n",
-    "kenr_prist_pd['k_bnr s^-1'] = kenr_prist[0].calc_dict['constant_dependence'][:, 1]\n",
+    "kenr_prist_pd['k_bnr s^-1'] = kenr_prist[0].calc_dict['constant_dependence'][:, 0]\n",
+    "kenr_prist_pd['k_enr s^-1'] = kenr_prist[0].calc_dict['constant_dependence'][:, 1]\n",
     "kenr_prist_pd['D_excited nm/s'] = kenr_prist[0].calc_dict['Diff_const'][:, 0]\n",
     "kenr_prist_pd['D_dark nm/s'] = kenr_prist[0].calc_dict['Diff_const'][:, 1]"
    ]
@@ -1044,19 +1116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kenr_defect_pd['k_enr s^-1'] = kenr_defect[0].calc_dict['constant_dependence'][:, 0]\n",
-    "kenr_defect_pd['k_bnr s^-1'] = kenr_defect[0].calc_dict['constant_dependence'][:, 1]\n",
+    "kenr_defect_pd['k_bnr s^-1'] = kenr_defect[0].calc_dict['constant_dependence'][:, 0]\n",
+    "kenr_defect_pd['k_enr s^-1'] = kenr_defect[0].calc_dict['constant_dependence'][:, 1]\n",
     "kenr_defect_pd['D_excited nm/s'] = kenr_defect[0].calc_dict['Diff_const'][:, 0]\n",
     "kenr_defect_pd['D_dark nm/s'] = kenr_defect[0].calc_dict['Diff_const'][:, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
